# Slicer

./: .gitignore  .guix-channel  .rancher-pipeline.yml  CMakeLists.txt  SuperBuild.cmake  guix.scm  rancher-pipeline.yml  slicer.scm
.guix/modules/: slicer.scm
Base/Logic/: CMakeLists.txt
Base/Python/: CMakeLists.txt
Base/Python/slicer/: util.py
Base/QTApp/: qSlicerApplicationHelper.cxx
Base/QTCore/: CMakeLists.txt
Base/QTGUI/: CMakeLists.txt  qSlicerApplication.cxx  qSlicerPythonManager.cxx
CMake/: ExternalProjectAddFetchMethod.cmake  ExternalProjectAddSource.cmake  ExternalProjectDependency.cmake  SlicerBlockCTKAppLauncherSettings.cmake  SlicerBlockInstallCMakeProjects.cmake  SlicerBlockInstallExtensionPackages.cmake  SlicerBlockInstallPython.cmake  SlicerBlockInstallQt.cmake  SlicerCPack.cmake  SlicerCPackBundleFixup.cmake.in  SlicerDashboardDriverScript.cmake  SlicerDirectories.cmake  SlicerExtensionCPack.cmake  SlicerInstallConfig.cmake.in  SlicerMacroBuildModuleLogic.cmake  SlicerUtilMacros.cmake  UseSlicer.cmake.in  UseSlicerInstall.cmake.in  vtkSlicerConfigure.h.in
CMake/LastConfigureStep/: CMakeLists.txt
Docker/: Dockerfile.ubuntu.hirsute
Docs/developer_guide/: extensions.md
Extensions/CMake/: SlicerBlockBuildPackageAndUploadExtension.cmake  SlicerExtensionsDashboardDriverScript.cmake
Libs/: CMakeLists.txt
Libs/ITKFactoryRegistration/: CMakeLists.txt
Libs/MRML/CLI/: CMakeLists.txt
Libs/MRML/Core/: CMakeLists.txt
Libs/MRML/DisplayableManager/: CMakeLists.txt
Libs/MRML/Logic/: CMakeLists.txt
Libs/MRML/Widgets/: CMakeLists.txt
Libs/vtkITK/: CMakeLists.txt
Libs/vtkSegmentationCore/: CMakeLists.txt
Libs/vtkTeem/: CMakeLists.txt
Modules/Loadable/Cameras/: CMakeLists.txt  qSlicerCamerasModule.cxx  qSlicerCamerasModule.h
Modules/Loadable/Data/: CMakeLists.txt  qSlicerDataModule.cxx  qSlicerDataModule.h
Modules/Loadable/Markups/: qSlicerMarkupsModule.cxx  qSlicerMarkupsModuleWidget.cxx  qSlicerMarkupsModuleWidget.h
Modules/Loadable/Markups/Widgets/Testing/Cxx/: CMakeLists.txt  qMRMLMarkupsAdditionalMalformedOptionsWidget.cxx  qMRMLMarkupsAdditionalMalformedOptionsWidget.h  qMRMLMarkupsAdditionalOptionsWidgetsFactoryTest.cxx  qMRMLMarkupsMalformedWidget.cxx  qMRMLMarkupsMalformedWidget.h
Modules/Loadable/Markups/Widgets/Testing/Cxx/Resources/UI/: qMRMLMarkupsAdditionalMalformedOptionsWidget.ui
Modules/Loadable/VolumeRendering/: CMakeLists.txt
Modules/Loadable/VolumeRendering/MRML/: CMakeLists.txt
SuperBuild/: External_CTK.cmake  External_CTKAPPLAUNCHER.cmake  External_CTKAppLauncherLib.cmake  External_DCMTK.cmake  External_ITK.cmake  External_JsonCpp.cmake  External_LZMA.cmake  External_LibArchive.cmake  External_LibFFI.cmake  External_PCRE.cmake  External_ParameterSerializer.cmake  External_RapidJSON.cmake  External_SimpleITK.cmake  External_SlicerExecutionModel.cmake  External_Swig.cmake  External_VTK.cmake  External_bzip2.cmake  External_curl.cmake  External_python-dicom-requirements.cmake  External_python-extension-manager-requirements.cmake  External_python-extension-manager-ssl-requirements.cmake  External_python-numpy.cmake  External_python-pip.cmake  External_python-pythonqt-requirements.cmake  External_python-requests-requirements.cmake  External_python-scipy.cmake  External_python-setuptools.cmake  External_python-wheel.cmake  External_python.cmake  External_qRestAPI.cmake  External_sqlite.cmake  External_tbb.cmake  External_teem.cmake  External_zlib.cmake
(+40 files in other folders)
